# FerroPhase

./: .gitignore  .gitmodules  Cargo.toml  Justfile  README.md  TEST_ORGANIZATION.md  TODO.md  conftest.py  pyproject.toml  pytest.ini  screenlog.0
bootstrap/: Cargo.toml
bootstrap/crates/fp-backend/: Cargo.toml
bootstrap/crates/fp-bytecode/: Cargo.toml
bootstrap/crates/fp-core/: Cargo.toml
bootstrap/crates/fp-interpret/: Cargo.toml
bootstrap/crates/fp-json/: Cargo.toml
bootstrap/crates/fp-lang/: Cargo.toml
bootstrap/crates/fp-native/: Cargo.toml
bootstrap/crates/fp-pipeline/: Cargo.toml
bootstrap/crates/fp-toml/: Cargo.toml
bootstrap/crates/fp-typing/: Cargo.toml
bootstrap/crates/magnet/: Cargo.toml
crates/fp-agent/: Cargo.toml
crates/fp-agent/src/: common.rs  lib.rs  normalize.rs  validate.rs
crates/fp-agent/tests/: custom_tool_validation.rs  openrouter_adapter.rs  tabcode_adapter.rs
crates/fp-backend/: Cargo.toml
crates/fp-backend/src/: error.rs  lib.ast  lib.ast-eval  lib.ast-typed  lib.hir  lib.rs
crates/fp-backend/tests/: README.md  contract_ast_to_hir.rs  hir_to_mir_contract.rs  mir_optimizer_tests.rs  mir_to_lir_contract.rs  query_pipeline.rs  test_const_eval_comprehensive.rs
crates/fp-clang/: Cargo.toml  INTEGRATION.md  README.md
crates/fp-clang/examples/: extract_headers.rs  parse_c_file.rs
crates/fp-clang/src/: ast.rs  clang_ast_lowering.rs  codegen.rs  error.rs  intrinsics.rs  lib.rs  parser.rs
crates/fp-clang/tests/: integration_test.rs
crates/fp-cli/: Cargo.toml
crates/fp-cli/src/: bootstrap.rs  cli.rs  codegen.rs  compilation.rs  config.rs  diagnostics.rs  languages.rs  lib.rs  pipeline.rs  project.rs  transpiler.rs
crates/fp-cli/tests/: integration_tests.rs  mir_facade.rs  test_compile_ast_target.rs  test_compile_cil.rs  test_compile_cil_container.rs  test_compile_cil_to_native_container.rs  test_compile_default_rust.rs  test_compile_dotnet.rs  test_compile_ebpf.rs  test_compile_gdscript_target.rs  test_compile_goasm_container.rs  test_compile_jvm.rs  test_compile_jvm_container.rs  test_compile_jvm_jar_to_native_container.rs  test_compile_native_archive_targets.rs  test_compile_native_elf_to_macho_exec_syscall.rs  test_compile_native_elf_to_macho_exec_system_ls.rs  test_compile_native_exec_syscall.rs  test_compile_native_macho_exec_targets.rs  test_compile_native_object_targets.rs  test_compile_native_text_targets.rs  test_compile_urcl_container.rs  test_container_transpile_placeholders.rs  test_inspect.rs  test_run_dotnet.rs  test_transpile.rs  test_transpile_backend.rs
crates/fp-compiler/: Cargo.toml
crates/fp-compiler/src/: lib.rs
crates/fp-core/: Cargo.toml  README.md
crates/fp-core/src/: cfg.rs  collections.rs  config.rs  context.rs  diagnostics.rs  error.rs  hir_place.rs  lib.rs  macros.rs  place.rs  pretty.rs  printer.rs  source_map.rs  span.rs  sql_ast.rs
crates/fp-core/tests/: hir_place_tests.rs  intrinsics_tests.rs  package_provider_tests.rs  runtime_format_tests.rs  test_core_ast.rs  vfs_tests.rs
crates/fp-cranelift/: Cargo.toml
crates/fp-cranelift/runtime/: fp_cranelift_runtime.c
crates/fp-cranelift/src/: codegen.rs  config.rs  lib.rs
crates/fp-interpret/: Cargo.toml
crates/fp-interpret/src/: const_eval.rs  error.rs  intrinsics.rs  lib.rs
crates/fp-interpret/tests/: assignment_lvalue_tests.rs  async_step_tests.rs  ffi_tests.rs  interpreter_intrinsic_tests.rs  jit_smoke_tests.rs  json_api_tests.rs  proc_macro_attr_derive_tests.rs  proc_macro_tests.rs  quote_splice_tests.rs  stack_snapshot_tests.rs
crates/fp-llvm/: Cargo.toml
crates/fp-llvm/runtime/: fp_unwind.cc
crates/fp-llvm/src/: codegen.rs  context.rs  debug_info.rs  intrinsics.rs  lib.rs  linking.rs  pretty.rs  runtime.rs  runtime_symbols.rs  stdlib.rs  target.rs
crates/fp-mips/: Cargo.toml
crates/fp-mips/tests/: test_mips_emit.rs
crates/fp-optimize/: Cargo.toml
crates/fp-optimize/examples/: generate-examples.rs  main_04_type_arithmetics_gen.rs
crates/fp-optimize/examples-archive/: generate-examples.rs  main_01_specialization_gen.rs  main_02_higher_kinded_function_gen.rs  main_04_type_arithmetics.rs  main_04_type_arithmetics_gen.rs
crates/fp-optimize/src/: error.rs  interpreter.rs  lib.rs  pipeline.rs
crates/fp-optimize/tests/: README.md  TEST_ORGANIZATION.md  contract_ast_to_hir.rs  hir_to_mir_contract.rs  test_basic_evaluation.rs  test_const_eval.rs  test_const_eval_comprehensive.rs  test_const_eval_intrinsics.rs  test_const_eval_phases.rs  test_const_evaluation_pure.rs  test_const_intrinsics_demo.rs  test_interpreter.rs  test_language_with_const_eval.rs  test_pass3_generic_contexts.rs  test_pass5_type_validation.rs  test_pass8_code_generation.rs  test_pass9_final_validation.rs  test_query_interpreter.rs  test_runtime_values.rs  test_specializer.rs  test_struct_creation_const_eval.rs
crates/fp-python/: Cargo.toml
crates/fp-python/src/: codegen.rs  frontend.rs  lib.rs  manifest.rs
crates/fp-rust/: Cargo.toml
crates/fp-rust-macro/: Cargo.toml
crates/fp-rust-macro/src/: lib.rs
crates/fp-rust/src/: ast_inspector.rs  frontend.rs  lib.rs  workspace.rs
crates/fp-rust/tests/: macro_lowering_tests.rs  package_provider_tests.rs  parse_workspace.rs  test_language_parsing.rs  test_parser.rs
crates/fp-shell/: Cargo.toml  build.rs
crates/fp-shell/examples/: README.md  inventory.toml  localhost.fp  localhost.sh  mixed-hosts.fp  mixed-hosts.sh  multi-host.fp  multi-host.sh  pyinfra-toolings.fp  pyinfra-toolings.sh  runtime-facts.fp  runtime-facts.sh  runtime-for.fp  runtime-for.sh  runtime-functions.fp  runtime-functions.sh  runtime-if.fp  runtime-if.sh  runtime-inventory.fp  runtime-inventory.sh  runtime-process.fp  runtime-process.sh  runtime-rsync.fp  runtime-rsync.sh  runtime-template.fp  runtime-template.sh  runtime-try.fp  runtime-try.ps1  runtime-try.sh  runtime-variables.fp  runtime-variables.sh  runtime-while.fp  runtime-while.sh  single-host.fp  single-host.sh  transports.fp  transports.inventory.fp  transports.inventory.sh  (+3 more)
crates/fp-typescript/: Cargo.toml
crates/magnet/: Cargo.toml  README.md
(+1710 files in other folders)
