[package]
name = "fp"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
fp-rust = { path = "crates/fp-rust" }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "eight_queens"
harness = false


[workspace]
resolver = "2"
members = [
    "crates/*",
]
default-members = ["crates/fp-cli"]
