[package]
name = "fp-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
fp-core = { path = "../fp-core" }
fp-interpret = { path = "../fp-interpret" }
fp-typing = { path = "../fp-typing" }
serde = { version = "1", features = ["derive"] }
dashmap = "5.4.0"
serde_json = "1"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
bytes = { version = "1.5.0", features = ["serde"] }
itertools = "0.12.1"
tracing = "0.1"
syn = "2"
proc-macro2 = "1"
eyre = "0.6"

[dev-dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
pretty_assertions = "1"
