[package]
name = "fp-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fp"
path = "src/bin/fp.rs"

[dependencies]
# Core FerroPhase crates
fp-core = { path = "../fp-core" }
fp-interpret = { path = "../fp-interpret" }
fp-optimize = { path = "../fp-optimize" }
fp-typing = { path = "../fp-typing" }
fp-rust = { path = "../fp-rust" }
fp-javascript = { path = "../fp-javascript" }
fp-csharp = { path = "../fp-csharp" }
fp-python = { path = "../fp-python" }
fp-llvm = { path = "../fp-llvm" }
fp-lang = { path = "../fp-lang" }
fp-wit = { path = "../fp-wit" }
fp-zig = { path = "../fp-zig" }

# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color"] }
clap_complete = "4.4"

# File I/O and path handling
walkdir = "2.4"
globset = "0.4"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
miette = { version = "7.6.0", features = ["fancy"] }

# Serialization for configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# Terminal output and colors
console = "0.16.1"
indicatif = "0.18.0"

# Async runtime for potential future features
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "fs", "process", "time", "macros"] }

# Error handling
eyre = "0.6"
thiserror = "2.0.17"

# Additional utilities
dirs = "6.0.0"
pathdiff = "0.2"
tempfile = "3.8"
quote = "1.0"
libc = "0.2"

# Performance and profiling

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
criterion = { version = "0.7.0" }

[features]
default = []
