[package]
name = "fp-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "fp"
path = "src/bin/fp.rs"

[dependencies]
# Core FerroPhase crates
fp-core = { path = "../fp-core" }
fp-interpret = { path = "../fp-interpret" }
fp-jit = { path = "../fp-jit" }
fp-backend = { path = "../fp-backend" }
fp-typing = { path = "../fp-typing" }
fp-typescript = { path = "../fp-typescript", optional = true }
fp-csharp = { path = "../fp-csharp", optional = true }
fp-dotnet = { path = "../fp-dotnet", optional = true }
fp-python = { path = "../fp-python", optional = true }
fp-golang = { path = "../fp-golang", optional = true }
fp-godot = { path = "../fp-godot", optional = true }
fp-llvm = { path = "../fp-llvm", optional = true }
fp-lang = { path = "../fp-lang" }
fp-wit = { path = "../fp-wit", optional = true }
fp-zig = { path = "../fp-zig", optional = true }
fp-sycl = { path = "../fp-sycl", optional = true }
fp-prql = { path = "../fp-prql", optional = true }
fp-sql = { path = "../fp-sql", optional = true }
fp-jsonschema = { path = "../fp-jsonschema", optional = true }
fp-json = { path = "../fp-json", optional = true }
fp-flatbuffers = { path = "../fp-flatbuffers", optional = true }
fp-toml = { path = "../fp-toml", optional = true }
fp-hcl = { path = "../fp-hcl", optional = true }
fp-pipeline = { path = "../fp-pipeline" }
fp-bytecode = { path = "../fp-bytecode" }
fp-jvm = { path = "../fp-jvm" }
fp-stackvm = { path = "../fp-stackvm" }
fp-wasm = { path = "../fp-wasm" }
fp-ebpf = { path = "../fp-ebpf" }
fp-native = { path = "../fp-native" }
fp-goasm = { path = "../fp-goasm" }
fp-urcl = { path = "../fp-urcl" }
fp-cranelift = { path = "../fp-cranelift", optional = true }

# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color"] }
clap_complete = "4.4"

# File I/O and path handling
walkdir = "2.4"
globset = "0.4"

# Logging and diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
miette = { version = "7.6.0", features = ["fancy"] }
termwiz = "0.23.3"

# Serialization for configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"

# Terminal output and colors
console = "0.16.1"
indicatif = "0.18.0"

# Async runtime for potential future features
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "fs", "process", "time", "macros"] }
futures-executor = "0.3"

# Error handling
eyre = "0.6"
thiserror = "2.0.17"

# Additional utilities
dirs = "6.0.0"
pathdiff = "0.2"
tempfile = "3.8"
quote = "1.0"
libc = "0.2"
object = { version = "0.37.3", features = ["write"] }
semver = "1"

# Performance and profiling

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = [
    "llvm",
    "cranelift",
    "lang-typescript",
    "lang-python",
    "lang-golang",
    "lang-zig",
    "lang-csharp",
    "lang-dotnet",
    "lang-godot",
    "lang-sycl",
    "lang-wit",
    "lang-prql",
    "lang-sql",
    "lang-jsonschema",
    "lang-json",
    "lang-flatbuffers",
    "lang-toml",
    "lang-hcl",
]

llvm = ["dep:fp-llvm"]
cranelift = ["dep:fp-cranelift"]

lang-typescript = ["dep:fp-typescript"]
lang-python = ["dep:fp-python"]
lang-golang = ["dep:fp-golang"]
lang-zig = ["dep:fp-zig"]
lang-csharp = ["dep:fp-csharp"]
lang-dotnet = ["dep:fp-dotnet"]
lang-godot = ["dep:fp-godot"]
lang-sycl = ["dep:fp-sycl"]
lang-wit = ["dep:fp-wit"]
lang-prql = ["dep:fp-prql"]
lang-sql = ["dep:fp-sql"]
lang-jsonschema = ["dep:fp-jsonschema"]
lang-json = ["dep:fp-json"]
lang-flatbuffers = ["dep:fp-flatbuffers"]
lang-toml = ["dep:fp-toml"]
lang-hcl = ["dep:fp-hcl"]
