[package]
name = "fp-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
fp-backend = { path = "../fp-backend" }
fp-core = { path = "../fp-core" }
fp-interpret = { path = "../fp-interpret" }
fp-typing = { path = "../fp-typing" }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0.0"

[dev-dependencies]
fp-lang = { path = "../fp-lang" }
