[package]
name = "fp-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
dashmap = "6.1.0"
serde_json = "1"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
bytes = { version = "1.5.0", features = ["serde"] }
itertools = "0.13.0"
eyre = "0.6.12"
thiserror = "2.0.0"
miette = { version = "7.2.0", features = ["fancy"] }
tracing = "0.1"
bitflags = "2.4"
once_cell = "1.19"
semver = "1"
toml = "0.8"

[dev-dependencies]
fp-backend = { path = "../fp-backend" }
fp-rust = { path = "../fp-rust" }
pretty_assertions = "1.4.0"
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
tempfile = "3"

[features]
default = []
bootstrap = []
