[package]
name = "fp-cranelift"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
fp-core = { path = "../fp-core" }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
cranelift-codegen = "0.110"
cranelift-frontend = "0.110"
cranelift-module = "0.110"
cranelift-object = "0.110"
target-lexicon = "0.12"

