[package]
name = "fp-interpret"
version = "0.1.0"
edition = "2021"

[dependencies]
fp-core = { path = "../fp-core" }
fp-pipeline = { path = "../fp-pipeline" }
fp-typing = { path = "../fp-typing" }
fp-rust = { path = "../fp-rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
itertools = "0.12.1"
tracing = "0.1"
eyre = "0.6"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1"
