[package]
name = "fp-llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
llvm-ir = { version = "0.11.3", features = ["llvm-19"] }
fp-core = { path = "../fp-core" }
anyhow = "1.0"
thiserror = "1.0"
which = "4.0"
tempfile = "3.0"
either = "1.9"
tracing = "0.1"
eyre = "0.6"

[dev-dependencies]
tempfile = "3.0"
