[package]
name = "fp-llvm"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.7.1", features = ["llvm21-1"] }
fp-core = { path = "../fp-core" }
fp-clang = { path = "../fp-clang" }
anyhow = "1.0"
thiserror = "1.0"
which = "4.0"
tempfile = "3.0"
either = "1.9"
tracing = "0.1"
eyre = "0.6"

[dev-dependencies]
tempfile = "3.0"
