[package]
name = "fp-optimize"
version = "0.1.0"
edition = "2021"

[dependencies]
fp-core = { path = "../fp-core" }
serde = { version = "1", features = ["derive"] }
dashmap = "5.4.0"
serde_json = "1"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
bytes = { version = "1.5.0", features = ["serde"] }
itertools = "0.12.1"
tracing = "0.1"
syn = "2"
proc-macro2 = "1"
fp-rust-lang = { path = "../fp-rust-lang" }

[dev-dependencies]
fp-rust-lang = { path = "../fp-rust-lang" }
syn = "2"
quote = "1"
proc-macro2 = "1"
pretty_assertions = "1"
