[package]
name = "fp-python"
version = "0.1.0"
edition = "2021"

[dependencies]
fp-core = { path = "../fp-core" }
itertools = "0.13.0"
eyre = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rustpython-parser = "0.4.0"
num-bigint = "0.4"
num-traits = "0.2"

[dev-dependencies]
tempfile = "3.10.1"
