[package]
name = "fp-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fp-core = { path = "../fp-core" }
syn-serde = { version = "0.2", features = ["json"] }
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
serde = "1"
pretty_assertions = "1.4.0"
eyre = "0.6.12"
itertools = "0.12.1"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
toml = "0.8"
cargo_metadata = "0.18"

[features]
default = []

[dev-dependencies]
tempfile = "3"
fp-backend = { path = "../fp-backend" }
