[package]
name = "fp-shell"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fp-bash = { path = "../fp-bash" }
fp-core = { path = "../fp-core" }
fp-interpret = { path = "../fp-interpret" }
fp-lang = { path = "../fp-lang" }
fp-powershell = { path = "../fp-powershell" }
fp-shell-core = { path = "../fp-shell-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.14"
