[package]
name = "magnet"
version = "0.1.0"
edition = "2024"
description = "CLI tool for managing Magnet.toml project configuration files"
authors = ["Jakku"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
glob = "0.3"
log = "0.4"
env_logger = "0.10"
pathdiff = "0.2"

[dev-dependencies]
tempfile = "3.4"
