[package]
name = "magnet"
version = "0.1.0"
edition = "2024"
description = "CLI tool for managing Magnet.toml project configuration files"
authors = ["Jakku"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6"
thiserror = "1.0"
glob = "0.3"
pathdiff = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crates-index = { version = "0.19", features = ["sparse-http"] }
semver = "1.0"
ureq = "2.9"
flate2 = "1.0"
tar = "0.4"
sha2 = "0.10"
hex = "0.4"
http = "0.2"
fp-core = { path = "../fp-core" }
fp-typescript = { path = "../fp-typescript" }

[dev-dependencies]
tempfile = "3.4"

[features]
default = []
cargo-fallback = []
